--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask==2.0.1
-requests==2.25.1
-rq==1.9.0
+Flask==2.3.2
+redis==4.5.5
+requests==2.30.0
+rq==1.14.1
 rq-dashboard==0.6.1
+werkzeug==2.3.4
